--- a/main.html
+++ b/main.html
@@ -80,7 +80,7 @@
         <div class="project-cards">
             <!-- Antique Watch Website Project Card -->
             <div class="project-card">
-                <img src="img/Screenshot (32) (1).png" alt="Antique Watch Website">
+                <img src="img/Screenshot (32).png" alt="Antique Watch Website">
                 <h3>Antique Watch Website</h3>
                 <p>A fully functional e-commerce website for antique watches built using Python and Django. It features user authentication, a product catalog, and a secure checkout system.</p><br><br>
                 <button class="btn">View Project</button>
@@ -88,7 +88,7 @@
     
             <!-- Other Projects -->
             <div class="project-card">
-                <img src="img\Screenshot (33) (1).png" alt="Project 2">
+                <img src="img\Screenshot (33).png" alt="Project 2">
                 <h3>Mediplus Website</h3>
                 <p>I built a Medical Appointment Booking System using Django to let users check doctor availability and book appointments. It includes user registration, and an admin panel to manage schedules. 
                 </p><br>
